# bencodex-python

./: .gitignore  .gitmodules  .travis.yml  CHANGES.rst  README.rst  setup.cfg  tox.ini
.github/workflows/: build.yaml
bencodex/: __init__.py  cli.py  reader.py  test.py  types.py  writer.py
