[metadata]
name = bencodex
version = 0.1.0
description = Bencodex reader/writer for Python
long_description = file: README.rst
license = GPLv3 or higher
url = https://github.com/planetarium/bencodex-python
author = Hong Minhee
author_email = hong.minhee@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.5
tests_require =
    PyYAML ~= 3.13
test_suite = bencodex.test

[options.package_data]
bencodex =
    spec/testsuite/*.dat
    spec/testsuite/*.yaml
    spec/testsuite/*.yml
